added css styling and refactored react router also managed state
Co-authored-by: Linda Ngo <lindango142@gmail.com>
Co-authored-by: Andy Wong <andy.wong.km27@gmail.com>
Co-authored-by: Tony Lim <tonylim9438@gmail.com>

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,60 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+  background-color: antiquewhite;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 765px;
+} 
+
+/* #body {
+ 
+} */
+#loginPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+#welcomeText {
+    font-weight: bold;
+    font-size: 30px;
+    display: flex;
+    background-image: linear-gradient(90deg, red, blue);
+    background-clip: text;
+    color: transparent;
+    margin-bottom: 20px;
+}
+
+#signUpBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#formBox {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+#formBox input {
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+#submitButton {
+    background-color: rgb(100, 200, 254);
+    border-radius: 10px;
+}
