--- a/client/styles.css
+++ b/client/styles.css
@@ -2,40 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
-  background-color: antiquewhite;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 765px;
-} 
-
 .error{
   animation: shake 0.2s ease-in-out 0s 2;
   box-shadow: 0 0 0.5em red;
 }
-/* #body {
- 
-} */
+
+html, body {
+  min-height: 100%;
+  background-color: antiquewhite;
+}
+
 #loginPage {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
 #welcomeText {
     font-weight: bold;
     font-size: 30px;
-    display: flex;
     background-image: linear-gradient(90deg, red, blue);
     background-clip: text;
     color: transparent;
     margin-bottom: 20px;
 }
 
+#h1AndButton {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #signUpBody {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
